# sunsynk-pipeline

./: .env.example  .gitignore  CLAUDE.md  app.py  pyproject.toml
.claude/skills/analyse-inverter/: SKILL.md
.claude/skills/pull-once/: SKILL.md
.github/workflows/: poll.yml
.streamlit/: secrets.toml.example
src/pipeline/: cli.py  config.py  fetch.py  sheets.py
