[project]
name = "sunsynk-pipeline"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.53.0",
    "gspread>=6.2.1",
    "python-dotenv>=1.2.2",
    "sunsynk-api-client>=1.0.9",
]

[project.scripts]
sunsynk = "pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
